--- a/zando/frontend/public/index.html
+++ b/zando/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Zando Genomic Analysis Platform"
+      content="Cosnetix Genomic Analysis Platform"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zando Genomic Analysis</title>
+    <title>Cosnetix Genomic Analysis</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
